--- a/client/src/components/art.css
+++ b/client/src/components/art.css
@@ -16,8 +16,9 @@
 }
 
 p {
-  padding: 20px 20px 0 20px;
+  padding: 0px 20px 0 20px;
   font-size: 20px;
+  text-align: center;
 }
 
 
@@ -37,7 +38,6 @@ p {
 }
 
 .btn {
-
   width: 200px;
 }
 
